--- a/css/styleo.css
+++ b/css/styleo.css
@@ -1,76 +1,105 @@
-*{
+* {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin    : 0;
+  padding   : 0;
+
 }
 
 body {
+  flex-direction  : column;
   background-color: white;
-  flex-direction: column;
 }
+
 @media screen and (min-with:480px) {
   body {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
+    background-color: white;
+    display         : flex;
+    flex-direction  : column;
   }
 }
+
 main {
   justify-content: center;
 }
-a, p, h2, h1{
+
+a,
+p,
+h2,
+h1 {
   font-family: 'Raleway', sans-serif;
 }
+
 p {
   font-size: 1.2rem;
 }
+
 h2 {
   font-size: 1.6rem;
 }
+
 @media screen and (min-width:768px) {
   p {
     font-size: 1.4rem;
   }
+
   h2 {
     font-size: 2rem;
   }
 }
+
 img {
   display: block;
 
 }
-a:link, a:visited, a:active {
+
+a:link,
+a:visited,
+a:active {
   text-decoration: none;
 }
+
 figcaption {
   text-align: center;
 }
-.container, .header, .footer, .contents {
-  max-width: 1280px;
-  display: flex;
+header {
+  background-color: whitesmoke;
+}
+.container,
+.header,
+.footer,
+.contents {
+  overflow       : hidden;
+  max-width      : 1280px;
+  display        : flex;
   justify-content: center;
-  margin: 0 auto;
-  text-align: center;
-  padding: 0.5rem 0;
+  margin         : 0 auto;
+  text-align     : center;
+  padding        : 0.5rem 0;
 }
+
 .retorno-estudio {
-  padding: 0.3rem;
-  margin: -1rem 0.3rem;
+  padding         : 0.3rem;
+  margin          : -1rem 0.3rem;
   background-color: rgb(75, 100, 37, 0.80);
-  color: white;
-  border-radius: 0.2rem;
-  position: fixed;
+  color           : white;
+  border-radius   : 0.2rem;
+  position        : fixed;
 }
+
 @media screen and (min-width:480px) {
   .retorno-estudio {
     padding: 0.3rem;
   }
 }
+
 @media screen and (min-width:768px) {
   .retorno-estudio {
-    margin-top: 3px;
-    padding: 0.5rem;
+    margin-top   : 3px;
+    padding      : 0.5rem;
     border-radius: 0.3rem;
+  }
+  #menuHide {
+    display: flex!important;
   }
 }
 
@@ -78,49 +107,66 @@ figcaption {
 /*-----NOMBRE---*/
 
 .header {
-  display: flex;
+  display        : flex;
   justify-content: space-between;
-  margin-top: 0;
+  margin-top     : 0;
 }
+.menu-hamburguesa {
+  display: block;
+  height: 60px;
+  width: auto;
+  margin-right: 10px;
+}
+
 .vacio {
   display: none;
-  width: 200px;
- }
+  width  : 200px;
+}
+
 .logo-img {
   display: none;
-  width: 170px;
+  width  : 170px;
 }
+
 .nombre-box {
   display: flex;
-  margin: 0 auto;
-  height: auto;
+  margin : 0 auto;
+  height : auto;
 }
+
 .nombre {
   margin-bottom: 0.3rem;
-  font-family: 'Cinzel Decorative', cursive;
-  font-size: 2.7rem;
+  font-family  : 'Cinzel Decorative', cursive;
+  font-size    : 2.7rem;
 }
 
 @media screen and (min-width:480px) {
   .nombre-box {
     display: flex;
-    margin: 0 auto;
+    margin : 0 auto;
   }
+
   .nombre {
-    padding: 0.2rem 1rem;
-    margin: 0;
+    padding  : 0.2rem 1rem;
+    margin   : 0;
     font-size: 3rem;
   }
 }
+
 @media screen and (min-width:768px) {
+  .menu-hamburuesa {
+    display: none;
+  }
   .nombre {
-    padding: 2rem 1rem 0;
+    padding  : 2rem 1rem 0;
     font-size: 4rem;
   }
+
   .vacio {
     display: block;
-    width: 100px;
+    width  : 100px;
   }
+
   .logo-img {
     display: block;
   }
@@ -131,35 +177,43 @@ figcaption {
 .social-box {
   display: none;
 }
-.social ul li span{
+
+.social ul li span {
   display: none;
 }
+
 .social ul {
   list-style: none;
-  display: flex;
+  display   : flex;
 }
+
 .social ul li a {
   text-decoration: none;
 }
+
 .social ul li a:before {
   font-family: "Font Awesome 5 Brands";
-  font-size: 3rem;
-  color:  rgb(75, 100, 37, 0.8);
-  padding: 0.5rem;
+  font-size  : 3rem;
+  color      : rgb(75, 100, 37, 0.8);
+  padding    : 0.5rem;
 }
+
 .social ul li a[href*='facebook.com']::before {
-    content: '\f082';
+  content: '\f082';
 }
+
 .social ul li a[href*='instagram.com']::before {
   content: '\e055';
 }
+
 .social ul li a[href*='whatsapp.com']::before {
   content: '\f40c';
 }
+
 @media screen and (min-width:768px) {
   .social-box {
     display: block;
-    width: 200px;
+    width  : 200px;
   }
 }
 
@@ -167,114 +221,146 @@ figcaption {
 
 .menu {
   display: flex;
-  height: 40px;
 }
+
 .menu ul {
-  display: flex;
-  flex-direction: row;
+  display       : flex;
+  flex-direction: column;
+
   list-style: none;
-  margin: 0 auto;
+  margin    : 0 auto;
   text-align: center;
-  padding: 0;
+  padding   : 0;
 }
-.menu ul li{
-  padding: 0.2rem 0.5rem 0.2rem;
+
+.menu ul li {
+  padding      : 1rem;
   border-radius: 0.2rem;
 }
+
 .menu ul a {
-  color: black;
-  text-align: center;
+  color          : black;
+  text-align     : center;
   text-decoration: none;
-  font-size: 1.4rem;
+  font-size      : 2rem;
+  padding        : 1rem;
 }
-.menu ul li:active {
-  background-color: rgb(75, 100, 37, 0.40);
-} 
 
 @media screen and (min-width:480px) {
-  .menu ul {
-    display: flex;
-    flex-direction: row;
+  .menu ul li {
+    padding: 1rem!important;
   }
+
 }
+
+.menu ul li:active {
+  background-color: rgb(75, 100, 37, 0.40);
+}
+
+
+
 @media screen and (min-width:768px) {
   .menu {
     display: block;
-    height: auto;
+    height : auto;
   }
+
+  .menu ul {
+    display       : flex;
+    flex-direction: row;
+  }
+
+
   .menu ul a {
     font-size: 1.8rem;
-    padding: 0 1.5rem;
+    padding  : 0 1.5rem;
   }
 }
+
 .menu ul li:hover {
   background-color: rgb(75, 100, 37, 0.40);
-} 
+}
 
 /* ---------MAIN ----------*/
-.contents {
-  display: flex;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  height: 580px;
+
+#proParch {
+  overflow: hidden;
 }
+
+.contents {
+  display           : flex;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing   : border-box;
+  box-sizing        : border-box;
+  height            : 580px;
+}
+
 .hero {
-  display: none;
-  width: 100%;
-  height: auto;
+  display            : none;
+  width              : 100%;
+  height             : auto;
   background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat  : no-repeat;
+  background-size    : cover;
 }
 
 .hero-text {
-  display: flex;
-  flex-direction: column;
-  background-color:  rgb(75, 100, 37, 0.8);
-  max-width: 100%;
-  height: auto;
-  position: absolute;
-  color: white;
-  z-index: 1;
-  text-align: center;
+  display         : flex;
+  flex-direction  : column;
+  background-color: rgb(75, 100, 37, 0.8);
+  max-width       : 100%;
+  height          : auto;
+  position        : absolute;
+  color           : white;
+  z-index         : 1;
+  text-align      : center;
 }
-.hero-text h1{
+
+.hero-text h1 {
   font-size: 2rem;
-  margin: 0;
-  display: none;
-} 
+  margin   : 0;
+  display  : none;
+}
+
 .hero-text p {
- padding: 5px;
-} 
+  padding: 5px;
+}
+
 .yo-image {
-  margin: 40px 40px 0 40px;
-  max-width: 100%;
+  margin    : 40px 40px 0 40px;
+  max-width : 100%;
   max-height: 100%;
 }
 
 @media screen and (min-width:480px) {
 
   .contents {
+    margin-bottom: 4rem;
     justify-content: flex-start;
-    height: 300px;
+    height         : 300px;
   }
+
   .hero-text {
-    flex-direction: row;    
-  } 
-   .hero-text h1 {
+ 
+    flex-direction: row;
+  }
+
+  .hero-text h1 {
     display: block;
   }
+
   .hero-text-2 {
-    display: flex;
+    display       : flex;
     flex-direction: column;
-    max-width: 100%;
+    max-width     : 100%;
   }
-  .menu ul li{
+
+  .menu ul li {
     padding: 0.1rem 0.3rem;
   }
+
   .yo-image {
-    margin: 40px 40px 40px 40px;
+    margin   : 40px 40px 40px 40px;
     max-width: 220px;
   }
 }
@@ -282,26 +368,36 @@ figcaption {
 @media screen and (min-width:768px) {
   .hero {
     display: block;
-    height: 500px;
+    height : 500px;
   }
+
+  #production-parch {
+    position: relative;
+    top     : 12px;
+  }
+
   .contents {
     height: 720px;
   }
+
   .hero-text {
-    width: 350px;
-    flex-direction: column;
-    background-color:rgb(75, 100, 37, 0.70);
-    height: 720px;
+    width           : 350px;
+    flex-direction  : column;
+    background-color: rgb(75, 100, 37, 0.70);
+    height          : 710px;
   }
+
   .hero-image {
-    width: auto;
+    width : auto;
     height: auto;
   }
+
   .hero-text p {
     padding: 0 40px 40px 40px;
-   } 
-   .yo-image {
-    max-width: 270px;
+  }
+
+  .yo-image {
+    max-width : 270px;
     max-height: 270px;
   }
 }
@@ -310,154 +406,198 @@ figcaption {
 
 
 .servicio-estudio {
-  display: flex;
+  display  : flex;
   flex-wrap: wrap;
 
   flex-direction: row;
-  height: auto;
-  width: 100%;
-  align-items: center;
+  height        : auto;
+  width         : 100%;
+  align-items   : center;
 }
-.servicio-foto{
-  display: flex;
+
+.servicio-foto {
+  display        : flex;
   justify-content: center;
 }
 
+.servicio-foto img {
+  width: 100%;
+}
+
+
 .servicio {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 20rem;
+  display        : flex;
+  flex-direction : column;
+  justify-content: flex-start;
+  width          : 20rem;
+  border         : transparent 5px solid;
 }
 
 .servicio h2 {
   padding: 20px;
 }
+
 .servicio p {
-  padding: 12px;
-  text-align:justify;
-	text-justify:inter-word;
+  padding     : 18px;
+  text-align  : left;
+  text-justify: inter-word;
 }
 
 
 /* -------EQUIPOS -----*/
 
-#equipos{
-  height: auto;
+#equipos {
+  height          : auto;
   background-color: whitesmoke;
 }
-.lista-equipos, .lista-galeria {
-  display: flex;
-  flex-wrap: wrap;
+
+.lista-equipos,
+.lista-galeria {
+  display       : flex;
+  flex-wrap     : wrap;
+  align-items   : center;
   flex-direction: column;
-  height: auto;
-  width: 100%;
+  height        : auto;
+  width         : 100%;
 }
 
 @media screen and (min-width:480px) {
-  .lista-equipos, .lista-galeria {
+
+  .lista-equipos,
+  .lista-galeria {
     flex-direction: row;
-    padding: 20px 0;
+    padding       : 20px 0;
   }
+
   .equipos-foto {
     max-width: 100%;
-    height: auto;
+    height   : auto;
   }
 }
+
 /* --------GALERIA -------*/
 #galeria {
 
-height: auto;
+  height          : auto;
   background-color: whitesmoke;
 
 }
+
 .galeria-foto {
   padding: 5px 5px;
 }
+
+.no {
+  display: block;
+}
+
 /*--------FOOTER--------*/
 #contacto {
-  height: auto;
+  height          : auto;
   background-color: whitesmoke;
-  padding:20px;
+  padding         : 20px;
 }
-.footer {
-  display: flex;
-  flex-direction: column;
 
-  height: auto;
+.footer {
+  display       : flex;
+  flex-direction: column;
+  height        : auto;
 }
+
 .div-footer {
-  display: flex;
-  flex-direction: row;
-  padding:20px;  
+  display        : flex;
+  flex-direction : row;
+  padding        : 20px;
   justify-content: space-around;
 }
+
 .mapa {
-  display: none;
-  text-align: left;
+  padding-top: 3rem;
+  display    : none;
+  text-align : left;
 }
+
 .formu {
-  align-items: center;
-  width: 630px;
-  padding: 0 0 0 10px;
-}
-.contenido-footer {
-  display: none;
+  display       : flex;
   flex-direction: column;
+  width         : auto;
+  padding       : 0 0 0 10px;
+}
+
+.contenido-footer {
+  display        : none;
+  flex-direction : column;
   justify-content: center;
-  align-items: center;
-  padding: 0;
+  align-items    : center;
+  padding        : 0;
 }
+
 .form-consulta {
-  padding: 0;
-  margin: 0;
-  background:white; 
+  padding   : 0;
+  margin    : 0;
+  background: whitesmoke;
 }
+
 .campo-form {
-  width:100%; 
-  height:36px; 
-  margin:2px 0 6px; 
-  padding-left:6px; 
+  width             : 100%;
+  height            : 36px;
+  margin            : 2px 0 6px;
+  padding           : 1rem;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; 
-  border-radius:3px; 
-  border:0; 
-  font-family: 'Raleway', sans-serif;
-  font-size:1.4em;
+  -moz-box-sizing   : border-box;
+  box-sizing        : border-box;
+  border-radius     : 3px;
+  border            : 0;
+  font-family       : 'Raleway', sans-serif;
+  font-size         : 1.4em;
 }
+
 label span {
   color: #f00;
 }
-.form-consulta input, textarea {
-  background-color: whitesmoke;
+
+.form-consulta input,
+textarea {
+  background-color: white;
 }
+
 .form-consulta textarea {
-  min-height: 150px!important;
+  padding   : 1rem;
+  min-height: 150px !important;
 }
+
+.form-consulta p {
+  padding-top   : 1rem;
+  padding-bottom: 0.5rem;
+}
+
 .btn-form {
-  display: inline-block; 
-  border:0; 
-  background-color: rgb(75, 100, 37, 0.70)!important;
-  height: 46px; 
-  line-height: 46px; 
-  padding: 0 20px; 
-  border-radius: 6px; 
-  color:white; 
-  text-decoration: none; 
-  text-transform: uppercase; 
-  letter-spacing: 1px
+  display         : inline-block;
+  border          : 0;
+  background-color: rgb(75, 100, 37, 0.70) !important;
+  height          : 46px;
+  line-height     : 46px;
+  padding         : 0 20px;
+  border-radius   : 6px;
+  color           : white;
+  text-decoration : none;
+  text-transform  : uppercase;
+  letter-spacing  : 1px
 }
+
 .btn-form:hover {
-  background-color: rgb(75, 100, 37)!important;
+  background-color: rgb(75, 100, 37) !important;
 }
+
 .contacto2 p {
-  padding: 0.3rem;
+  padding  : 1.5rem;
   font-size: 1.2rem;
 }
+
 .contacto {
   display: none;
 }
+
 @media screen and (min-width:480px) {
   .footer {
     align-items: center;
@@ -466,17 +606,24 @@ label span {
 
 @media screen and (min-width:768px) {
   .contenido-footer {
+
     display: block;
   }
+
   .mapa {
+
     display: block;
-    
   }
+
+  .mapa iframe {
+    display: block;
+    margin : auto;
+  }
+
   .contacto {
-    display: flex;
+    display       : flex;
     flex-direction: column;
   }
 }
 
 /*--- FORMULARIO DE CONTACTO ---*/
-
